fix scroll in touch devices, fix some spacing

--- a/src/styles/layouts/_upperbar.scss
+++ b/src/styles/layouts/_upperbar.scss
@@ -9,23 +9,22 @@
         margin-left: 10px;
         cursor: pointer;
         transition: 0.2s;
+        @media (max-width: 420px), (min-width: 768px) and (max-width: 992px) {
+            margin-right: 25px;
+        }
         &:hover {
             background-color: #ee1c25;
         }
     }
-}
-
-@media (max-width: 420px), (min-width: 768px) and (max-width: 992px) {
-    .upper-bar span {
-        display: block;
+    span {
+        @media (max-width: 420px), (min-width: 768px) and (max-width: 992px) {
+            display: block;
+        }
     }
-    button {
-        margin-right: 25px;
-    }
-}
-@media (max-width: 768px) {
-    .upper-bar .left,
-    .upper-bar .right {
-        padding-bottom: 10px;
+    .left,
+    .right {
+        @media (max-width: 768px) {
+            padding-bottom: 10px;
+        }
     }
 }
